--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es6",
-    "outDir": "out",
-    "lib": ["es6"],
+    "outDir": "dist",
+    "lib": ["es6", "dom"],
     "sourceMap": true,
     "rootDir": "src",
-    "strict": true
+    "strict": true,
+    "noImplicitReturns": true,
+    "declaration": true
   },
-  "exclude": ["node_modules", ".vscode-test"]
+  "exclude": ["dist"],
+  "include": ["src"]
 }
