--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "domain-graph-vscode",
-  "displayName": "Domain Graph VSCode Extension",
+  "displayName": "Domain Graph for VSCode",
   "description": "Blank web application built with Typescript and LESS",
   "version": "0.0.1",
   "engines": {
@@ -24,16 +24,20 @@
   "scripts": {
     "vscode:prepublish": "npm run build",
     "pretest": "rm -rf coverage/*",
-    "lint": "eslint src/**/*.ts && prettier -c .",
+    "lint": "eslint . && prettier -c .",
     "test": "jest",
     "prebuild": "npm run lint && rm -rf dist/*",
     "build": "tsc && webpack --config webpack.prod.js",
+    "tsc": "tsc",
+    "webpack": "webpack --config webpack.prod.js",
     "lint:fix": "eslint --fix src/**/*.ts && prettier -w ."
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.17.9",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
     "@types/vscode": "^1.59.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
@@ -42,6 +46,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
@@ -58,5 +63,9 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
