--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "domain-graph": "^0.1.2",
+    "graphql": "^15.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
