--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^14.17.9",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.9",
+    "@types/uuid": "^8.3.1",
     "@types/vscode": "^1.59.0",
     "@types/vscode-webview": "^1.57.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -63,6 +64,7 @@
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
+    "typed-emitter": "^1.3.1",
     "typescript": "^4.3.5",
     "vscode-test": "^1.5.2",
     "webpack": "^5.50.0",
@@ -72,9 +74,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "domain-graph": "^0.1.2",
+    "domain-graph": "^0.1.3",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   }
 }
