--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "engines": {
     "vscode": "^1.59.0"
   },
+  "icon": "resources/icon.png",
   "categories": [
+    "Visualization",
     "Other"
   ],
   "activationEvents": [
